...
        termStart = LocalDate.of(2026, 8, 24),
        termEnd = LocalDate.of(2026, 12, 18),
        courses = listOf(
            course(DayOfWeek.MONDAY, 10, 0, 12, 50, "조명기초및실습", "덕성관 402", "이용창"),
            course(DayOfWeek.TUESDAY, 9, 0, 11, 50, "스튜디오기초실습", "기예관 122", "이상운"),
            course(DayOfWeek.TUESDAY, 13, 0, 15, 50, "카메라기초및실습", "덕성관 210", "김재호"),
            course(DayOfWeek.TUESDAY, 16, 0, 18, 50, "음향기초실습", "덕성관 303", "이화현"),
            course(DayOfWeek.THURSDAY, 13, 0, 14, 50, "프리젠테이션영어", "덕성관 510-1", "이효정"),
            course(DayOfWeek.FRIDAY, 10, 0, 12, 50, "방송시스템전기", "기예관 412", "박창묵"),
        ),
    )

    private fun course(
...
